--- a/WebSite pages/contact.html
+++ b/WebSite pages/contact.html
@@ -13,7 +13,7 @@
             <nav id="nav" class="navbar">
                 <a href="../index.html">« Back to Home</a>
                 <a href="../WebSite pages/about.html">About</a>
-                <a href="../WebSite pages/Libary.html">Libary</a>
+                <a href="../WebSite pages/Author.html">Author info</a>
                 <a href="../WebSite pages/art.html">Art</a>
                 <a href="#">Contact</a>
             </nav>
