--- a/WebSite pages/about.html
+++ b/WebSite pages/about.html
@@ -12,7 +12,7 @@
         <nav id="nav" class="navbar">
             <a href="../index.html">« Back to Home</a>
             <a href="#">About</a>
-            <a href="../WebSite pages/Libary.html">Libary</a>
+            <a href="../WebSite pages/Author.html">Author info</a>
             <a href="../WebSite pages/art.html">art</a>
             <a href="../WebSite pages/contact.html">Contact</a>
         </nav>
