--- a/WebSite pages/art.html
+++ b/WebSite pages/art.html
@@ -12,20 +12,22 @@
         <nav id="nav" class="navbar">
             <a href="../index.html">« Back to Home</a>
             <a href="../WebSite pages/about.html">About</a>
-            <a href="../WebSite pages/Libary.html">Libary</a>
+            <a href="../WebSite pages/Author.html">Author info</a>
             <a href="#">art</a>
             <a href="../WebSite pages/contact.html">Contact</a>
         </nav>
         <h1>Art</h1>
     </header>
-    <div>
-        <p>Stormlight image</p>
-        <img src="../images/Stromlight Archive.jpg" alt="Stormlight Archive Pic" width="1600px" height="800px">
-    </div>
-    <div>
-        <p>Dune image</p>
-        <img src="../images/dune.jpg" alt="Stormlight Archive Pic" width="1700px" height="600px">
-    </div>
+    <main>
+        <div>
+            <p>Stormlight image</p>
+            <img src="../images/Stromlight Archive.jpg" alt="Stormlight Archive Pic" width="1600px" height="800px">
+        </div>
+        <div>
+            <p>Dune image</p>
+            <img src="../images/dune.jpg" alt="Stormlight Archive Pic" width="1700px" height="600px">
+        </div>
+    </main>
 
 
 
