--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="nav" class="navbar">
     <a href="#">Home</a>
     <a href="WebSite pages/about.html">About</a>
-    <a href="WebSite pages/Libary.html">Libary</a>
+    <a href="WebSite pages/Author.html">Author info</a>
     <a href="WebSite pages/art.html">Art</a>
     <a href="WebSite pages/contact.html">Contact</a>
     </nav>
@@ -31,6 +31,7 @@
             <li>GrimDark</li>
             <li>SteamPunk</li>
             <li>Historical fantasy</li>
+            <li>Ya fantasy</li>
         </ul>
     </div>
     <!--Top Right Image -->
