--- a/WebSite pages/Author.html
+++ b/WebSite pages/Author.html
@@ -18,50 +18,51 @@
         </nav>
     <h1>Author Information</h1>
     </header>
+    <br>
     <main class="container">
         <section1 id="Sci-fi">
-            <p>Sci-fi</p>
+            <h2>Sci-Fi</h2>
         </section1>
         <!-- Dune Part -->
         <section2 id="DuneAuthor">
-            <p>Frank Herbert</p>
+            <img class="Author" src="../images/Author-images/Frank Herbert.jpg" alt="Frank Herbert">
         </section2>
         <section3 id="DuneAuthorAbout">
             <p>Dune Author</p>
         </section3>
         <section4 id="fantasy">
-            <p>Fantasy</p>
+            <h2>Fantasy</h2>
         </section4>
         <!-- Stormlight Archive Part -->
         <section5 id="StormlightAuthor">
-            <p>Brandon Sanderson pic</p>
+            <img class="Author" src="../images/Author-images/Brandon Sanderson.jpg" alt="Brandon Sanderson">
         </section5>
         <section6 id="StormlightAuthorAbout">
             <p>Brandon Sanderson</p>
         </section6>
         <!--  Wheel of Time Part -->
          <section7 id="WheelOfTimeAuthor">
-            <p>Robert Jordan pic</p>
+            <img class="Author" src="../images/Author-images/Robert Jordan.jpg" alt="Robert Jordan">
         </section7>
         <section8 id="WheelOfTimeAbout">
             <p>Robert Jordan</p>
         </section8>
         <section9 id="YA-fantasy">
-            <p>YA-fantasy</p>
+            <h2>YA-fantasy</h2>
         </section9>
         <!--  His Dark Materials Part -->
         <section10 id="HisDarkMaterialsAuthor">
-            <p>Phillup Pullman pic</p>
+            <img class="Author" src="../images/Author-images/Phillup Pullman.jpg" alt="Phillup Pullman">
         </section10>
         <section11 id="HisDarkMaterialsAuthorAbout">
             <p>Phillup Pullman</p>
         </section11>
         <section12 id="GrimDark">
-            <p>Grim Dark</p>
+            <h2>Grim Dark</h2>
         </section12>
         <!--  Asoiaf Part -->
         <section13 id="ASOIAFAuthor">
-            <p>George RR Martin pic</p>
+            <img class="Author" src="../images/Author-images/Gerogre RR martin.jpg" alt="George RR martin">
         </section13>
         <section14 id="ASOIAFAuthorAbout">
             <p>George</p>
