added info for authors
info authors

--- a/WebSite pages/Author.html
+++ b/WebSite pages/Author.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Libary page website</title>
     <link rel="stylesheet" type="text/css" href="../css/style-Author.css">
+    <style>
+    </style>
 </head>
 <body>
     <header>
@@ -28,7 +30,12 @@
             <img class="Author" src="../images/Author-images/Frank Herbert.jpg" alt="Frank Herbert">
         </section2>
         <section3 id="DuneAuthorAbout">
-            <p>Dune Author</p>
+            <p>Frank Herbert</p>
+            <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Tacoma, Washington, The United StatesOctober 08, 1920</span></p>
+            <p>Frank Herbert was a critically acclaimed and commercially successful American science fiction author.
+                He is best known for the novel Dune and its five sequels. The Dune saga, set in the distant future and taking place over millennia, 
+                dealt with themes such as human survival and evolution, ecology, and the intersection of religion, politics, and power, and is widely
+                considered to be among the classics in the field of science fiction. He was the father of fellow author Brian Herbert.</p>
         </section3>
         <section4 id="fantasy">
             <h2>Fantasy</h2>
@@ -39,6 +46,18 @@
         </section5>
         <section6 id="StormlightAuthorAbout">
             <p>Brandon Sanderson</p>
+            <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Lincoln, Nebraska, The United States</span></p>
+            <p>Brandon Sanderson was born in 1975 in Lincoln, Nebraska. As a child Brandon enjoyed reading, but he lost interest in the types of titles often suggested to him, and by junior high he never cracked a book if he could help it.
+                This changed when an eighth grade teacher gave him Dragonsbane by Barbara Hambly.
+                Brandon was working on his thirteenth novel when Moshe Feder at Tor Books bought the sixth he had written. Tor has published Elantris, 
+                the Mistborn trilogy and its followup The Alloy of Law, Warbreaker, and The Way of Kings and Words of Radiance, the first two in the planned ten-volume series The Stormlight Archive. 
+                He was chosen to complete Robert Jordan’s Wheel of Time series; 2009’s The Gathering Storm and 2010’s Towers of Midnight were followed by the final book in the series, A Memory of Light, in January 2013.
+                Four books in his middle-grade Alcatraz vs. the Evil Librarians series have been released in new editions by Starscape, and his novella Infinity Blade Awakening was an ebook bestseller for Epic Games accompanying their acclaimed Infinity Blade iOS video game series.
+                Two more novellas, Legion and The Emperor’s Soul, were released by Subterranean Press and Tachyon Publications in 2012, and 2013 brought two young adult novels,
+                The Rithmatist from Tor and Steelheart from Delacorte.
+                The only author to make the short list for the David Gemmell Legend Award six times in four years, Brandon won that award in 2011 for The Way of Kings.
+                The Emperor’s Soul won the 2013 Hugo Award for Best Novella. He has appeared on the New York Times Best-Seller List multiple times, with five novels hitting the #1 spot.
+                Currently living in Utah with his wife and children, Brandon teaches creative writing at Brigham Young University.</p>
         </section6>
         <!--  Wheel of Time Part -->
          <section7 id="WheelOfTimeAuthor">
@@ -46,6 +65,15 @@
         </section7>
         <section8 id="WheelOfTimeAbout">
             <p>Robert Jordan</p>
+            <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Charleston, South Carolina, The United StatesOctober 17, 1948</span></p>
+            <p>Jordan was born in Charleston, South Carolina. He served two tours in Vietnam (from 1968 to 1970) with the United States Army as a helicopter gunner. 
+                He was awarded the Distinguished Flying Cross with bronze oak leaf cluster, the Bronze Star with "V" and bronze oak leaf cluster, and two Vietnamese Gallantry Crosses with palm. 
+                After returning from Vietnam he attended The Citadel where he received an undergraduate degree in physics. After graduating he was employed by the United States Navy as a nuclear engineer.
+                He began writing in 1977. He was a history buff and enjoyed hunting, fishing, sailing, poker, chess, pool, and pipe collecting.
+                He described himself as a "High Church" Episcopalian and received communion more than once a week. He lived with his wife Harriet McDougal, who works as a book editor 
+                (currently with Tor Books; she was also Jordan's editor) in a house built in 1797.
+                Responding to queries on the similarity of some of the concepts in his Wheel of Time books with Freemasonry concepts, Jordan admitted that he was a Freemason. However, 
+                "like his father and grandfather," he preferred not to advertise, possibly because of the negative propaganda against Freemasonry. In his own words, "no man in this country should feel in danger because of his beliefs."</p>
         </section8>
         <section9 id="YA-fantasy">
             <h2>YA-fantasy</h2>
@@ -55,7 +83,11 @@
             <img class="Author" src="../images/Author-images/Phillup Pullman.jpg" alt="Phillup Pullman">
         </section10>
         <section11 id="HisDarkMaterialsAuthorAbout">
-            <p>Phillup Pullman</p>
+            <p>Philip Pullman</p>
+            <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Norwich, Norfolk, England, The United KingdomOctober 19, 1946</span></p>
+            <p>Philip Pullman is best known for the His Dark Materials trilogy: The Golden Compass, The Subtle Knife, and The Amber Spyglass, 
+                which has been named one of the top 100 novels of all time by Newsweek and one of the all-time greatest novels by Entertainment Weekly. 
+                In 2004, he was appointed a Commander of the Order of the British Empire. He lives in Oxford, England. </p>
         </section11>
         <section12 id="GrimDark">
             <h2>Grim Dark</h2>
@@ -65,7 +97,18 @@
             <img class="Author" src="../images/Author-images/Gerogre RR martin.jpg" alt="George RR martin">
         </section13>
         <section14 id="ASOIAFAuthorAbout">
-            <p>George</p>
+            <p>George RR Martin</p>
+            <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">Bayonne, New Jersey, The United StatesSeptember 20, 1948</span></p>
+
+            <p>George Raymond Richard "R.R." Martin was born September 20, 1948, in Bayonne, New Jersey. His father was Raymond Collins Martin, 
+                a longshoreman, and his mother was Margaret Brady Martin. He has two sisters, Darleen Martin Lapinski and Janet Martin Patten.
+                Martin attended Mary Jane Donohoe School and Marist High School. He began writing very young, selling monster stories to other neighborhood children for pennies, 
+                dramatic readings included. Later he became a comic book fan and collector in high school, and began to write fiction for comic fanzines (amateur fan magazines).
+                Martin's first professional sale was made in 1970 at age 21: "The Hero," sold to Galaxy, published in February, 1971 issue. Other sales followed.
+                In 1970 Martin received a B.S. in Journalism from Northwestern University, Evanston, Illinois, graduating summa cum laude. He went on to complete a M.S.
+                in Journalism in 1971, also from Northwestern.
+                Martin's present home is Santa Fe, New Mexico. He is a member of Science Fiction & Fantasy Writers of America (he was South-Central Regional Director 1977-1979, 
+                and Vice President 1996-1998), and of Writers' Guild of America, West.</p>
         </section14>
     </main>
     <footer>
