--- a/WebSite pages/Author.html
+++ b/WebSite pages/Author.html
@@ -15,10 +15,11 @@
             <a href="../index.html">« Back to Home</a>
             <a href="../WebSite pages/about.html">About</a>
             <a href="#">Author info</a>
-            <a href="../WebSite pages/art.html">art</a>
+            <a href="../WebSite pages/art.html">Art</a>
             <a href="../WebSite pages/contact.html">Contact</a>
         </nav>
     <h1>Author Information</h1>
+    <img class="logo" src="../images/sword_wings.jpg" alt="Logo" width="1000px" height="300px" style="border: dotted grey 5px;">
     </header>
     <br>
     <main class="container">
