--- a/WebSite pages/art.html
+++ b/WebSite pages/art.html
@@ -13,20 +13,36 @@
             <a href="../index.html">« Back to Home</a>
             <a href="../WebSite pages/about.html">About</a>
             <a href="../WebSite pages/Author.html">Author info</a>
-            <a href="#">art</a>
+            <a href="#">Art</a>
             <a href="../WebSite pages/contact.html">Contact</a>
         </nav>
         <h1>Art</h1>
+        <img class="logo" src="../images/sword_wings.jpg" alt="Logo" width="1000px" height="300px" style="border: dotted grey 5px;margin-bottom: 10px;">
     </header>
     <main>
         <div>
-            <p>Stormlight image</p>
+            <h2>Stormlight Art</h2>
             <img src="../images/Stromlight Archive.jpg" alt="Stormlight Archive Pic" width="1600px" height="800px">
         </div>
         <div>
-            <p>Dune image</p>
+            <h2>Dune Art</h2>
             <img src="../images/dune.jpg" alt="Stormlight Archive Pic" width="1700px" height="600px">
         </div>
+        <div>
+            <h2>ASOIAF Art</h2>
+            <img src="../images/ASOIAF ART.webp" alt="ASOIAF Pic" width="1400px" height="900px">
+        </div>
+        <div>
+            <h2>Wheel of Time ART</h2>
+            <img src="../images/WheelOfTime.jpg" alt="Wheel Of Time Pic" width="2000px" height="1000px">
+        </div>
+        <div>
+            <h2>his Dark Materials ART</h2>
+            <img src="../images/His Dark Materials.jpg" alt="His Dark Materials Pic" width="1600px" height="900px">
+        </div>
+
+
+
     </main>
 
 
