--- a/WebSite pages/contact.html
+++ b/WebSite pages/contact.html
@@ -18,7 +18,7 @@
                 <a href="#">Contact</a>
             </nav>
             <h1>Contact</h1>
-            <img class="logo" src="../images/sword_wings.jpg" alt="Logo" width="1000px" height="300px">
+            <img class="logo" src="../images/sword_wings.jpg" alt="Logo" width="1000px" height="300px" style="border: dotted grey 5px;margin-bottom: 10px;">
         </header>
         <main>
 
