--- a/WebSite pages/about.html
+++ b/WebSite pages/about.html
@@ -13,7 +13,7 @@
             <a href="../index.html">« Back to Home</a>
             <a href="#">About</a>
             <a href="../WebSite pages/Author.html">Author info</a>
-            <a href="../WebSite pages/art.html">art</a>
+            <a href="../WebSite pages/art.html">Art</a>
             <a href="../WebSite pages/contact.html">Contact</a>
         </nav>
         <h1 style="top: 0;">About each Fantasy series</h1>
