added mobile layout to authors
mobile layout authors

--- a/WebSite pages/Author.html
+++ b/WebSite pages/Author.html
@@ -31,7 +31,7 @@
             <img class="Author" src="../images/Author-images/Frank Herbert.jpg" alt="Frank Herbert">
         </section2>
         <section3 id="DuneAuthorAbout">
-            <p>Frank Herbert</p>
+            <b><p class="Authorfont">Frank Herbert</p></b>
             <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Tacoma, Washington, The United StatesOctober 08, 1920</span></p>
             <p>Frank Herbert was a critically acclaimed and commercially successful American science fiction author.
                 He is best known for the novel Dune and its five sequels. The Dune saga, set in the distant future and taking place over millennia, 
@@ -46,7 +46,7 @@
             <img class="Author" src="../images/Author-images/Brandon Sanderson.jpg" alt="Brandon Sanderson">
         </section5>
         <section6 id="StormlightAuthorAbout">
-            <p>Brandon Sanderson</p>
+            <b><p class="Authorfont">Brandon Sanderson</p></b>
             <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Lincoln, Nebraska, The United States</span></p>
             <p>Brandon Sanderson was born in 1975 in Lincoln, Nebraska. As a child Brandon enjoyed reading, but he lost interest in the types of titles often suggested to him, and by junior high he never cracked a book if he could help it.
                 This changed when an eighth grade teacher gave him Dragonsbane by Barbara Hambly.
@@ -65,7 +65,7 @@
             <img class="Author" src="../images/Author-images/Robert Jordan.jpg" alt="Robert Jordan">
         </section7>
         <section8 id="WheelOfTimeAbout">
-            <p>Robert Jordan</p>
+            <b><p class="Authorfont">Robert Jordan</p></b>
             <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Charleston, South Carolina, The United StatesOctober 17, 1948</span></p>
             <p>Jordan was born in Charleston, South Carolina. He served two tours in Vietnam (from 1968 to 1970) with the United States Army as a helicopter gunner. 
                 He was awarded the Distinguished Flying Cross with bronze oak leaf cluster, the Bronze Star with "V" and bronze oak leaf cluster, and two Vietnamese Gallantry Crosses with palm. 
@@ -84,7 +84,7 @@
             <img class="Author" src="../images/Author-images/Phillup Pullman.jpg" alt="Phillup Pullman">
         </section10>
         <section11 id="HisDarkMaterialsAuthorAbout">
-            <p>Philip Pullman</p>
+            <b><p class="Authorfont">Philip Pullman</p></b>
             <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">in Norwich, Norfolk, England, The United KingdomOctober 19, 1946</span></p>
             <p>Philip Pullman is best known for the His Dark Materials trilogy: The Golden Compass, The Subtle Knife, and The Amber Spyglass, 
                 which has been named one of the top 100 novels of all time by Newsweek and one of the all-time greatest novels by Entertainment Weekly. 
@@ -98,7 +98,7 @@
             <img class="Author" src="../images/Author-images/Gerogre RR martin.jpg" alt="George RR martin">
         </section13>
         <section14 id="ASOIAFAuthorAbout">
-            <p>George RR Martin</p>
+            <b><p class="Authorfont">George RR Martin</p></b>
             <p><span style="font-weight: bolder;">Born</span><span style="position:absolute;right: 20px;">Bayonne, New Jersey, The United StatesSeptember 20, 1948</span></p>
 
             <p>George Raymond Richard "R.R." Martin was born September 20, 1948, in Bayonne, New Jersey. His father was Raymond Collins Martin, 
