--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="item item1">
         <h2>Jade Wolfe</h2>
         <br>
+        <h3>Fantasy Genres</h3>
         <ul>
             <li>Sci-fi</li>
             <li>High Fantasy</li>
