Added contact Page
contact page added

--- a/WebSite pages/contact.html
+++ b/WebSite pages/contact.html
@@ -21,18 +21,14 @@
             <img class="logo" src="../images/sword_wings.jpg" alt="Logo" width="1000px" height="300px" style="border: dotted grey 5px;margin-bottom: 10px;">
         </header>
         <main>
-
-
-           A little About me I like the fatansy genre in books and. This My 1st book i read was proabley harry potter and form there I jumped form fantasy series and have gained a likeing towards it
-           my favourite book series is proablely the stormlight archive due to the high fantasy nature of it.
-
-            
-
            <img class="img" src="../images/MyBooks.png" alt="My books">
-
-
-            <p>Share book recommendations hit my email up</p>
-
+           <p>A little About me. Born in Edmonton Alberta. I am Curretnly in school rate now enrolled at Nait in the CNT program.
+            I am a big fan of the Fantasy Genre in terms of reading.My first read was harry potter when I was grown uup and I have sinced jummped
+            from book to book. One of my favourite series is Brandon Sandersos's Stormlight Archive Series the books apsn over 10
+            novels long and are very In depth and intricate. I also enjoy watching Fantasy tv Series as Game of thrones is oen my favoute shows I have witnessed.
+            </p>
+            <br>
+            <p>you can give book recommendations by Emailing me at jjwolfe@ualberta.ca Thanks</p>
         </main>
         <footer>
             <p>&#169 JadeWolfe</p>
