mobile layout main
mobile layout main

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div class="item item1">
         <h2>Jade Wolfe</h2>
         <br>
+        <img src="images/Helm.png" alt="helm">
+        <br>
         <h3>Fantasy Genres</h3>
         <ul>
             <li>Sci-fi</li>
@@ -45,8 +47,8 @@
     </div>  
     <!--Stuff container -->
     <div class="item item4">
-        <p>Stuff container</p>
-        <p>Dont know what to put here yet</p>
+        <p style="font-size: 30px;">Student at Nait</p>
+        <img src="images/Nait Logo.png" alt="NaitLogo" width="300px" height="300px">
     </div>
 
 
