--- a/WebSite pages/about.html
+++ b/WebSite pages/about.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Jade Wolfe</title>
     <link rel="stylesheet" type="text/css" href="../css/style-about.css">
+    <style>
+        header{
+            background-image: url('../images/headerBackground2.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+
+
+
 </head>
 <body>
     <header>
