--- a/WebSite pages/art.html
+++ b/WebSite pages/art.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art page</title>
     <link rel="stylesheet" type="text/css" href="../css/style-art.css">
+    <style>
+          header{
+            background-image: url('../images/headerBackground2.png');
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <header>
