--- a/WebSite pages/contact.html
+++ b/WebSite pages/contact.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Jade Wolfe</title>
     <link rel="stylesheet" type="text/css" href="../css/style-contact.css">
+    <style>
+        header{
+            background-image: url('../images/headerBackground2.png');
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -22,10 +28,10 @@
         </header>
         <main>
            <img class="img" src="../images/MyBooks.png" alt="My books">
-           <p>A little About me. Born in Edmonton Alberta. I am Curretnly in school rate now enrolled at Nait in the CNT program.
-            I am a big fan of the Fantasy Genre in terms of reading.My first read was harry potter when I was grown uup and I have sinced jummped
-            from book to book. One of my favourite series is Brandon Sandersos's Stormlight Archive Series the books apsn over 10
-            novels long and are very In depth and intricate. I also enjoy watching Fantasy tv Series as Game of thrones is oen my favoute shows I have witnessed.
+           <p>A little About me. Born in Edmonton Alberta. I am Currently in school rate now enrolled at Nait in the CNT program.
+            I am a big fan of the Fantasy Genre in terms of reading.My first read was harry potter when I was grown up and I have sinced jumped
+            from book to book. One of my favourite series is Brandon Sandersos's Stormlight Archive Series the books Span over 10
+            novels long and are very In depth and intricate. I also enjoy watching many tv Series such as Game of thrones.
             </p>
             <br>
             <p>you can give book recommendations by Emailing me at jjwolfe@ualberta.ca Thanks</p>
