--- a/WebSite pages/Author.html
+++ b/WebSite pages/Author.html
@@ -7,6 +7,10 @@
     <title>Libary page website</title>
     <link rel="stylesheet" type="text/css" href="../css/style-Author.css">
     <style>
+        header{
+            background-image: url('../images/headerBackground2.png');
+            background-size: cover;
+        }
     </style>
 </head>
 <body>
